--- a/templates/index.html
+++ b/templates/index.html
@@ -7,11 +7,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
     <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
-    <script src="{{url_for('static', filename='chatbot.js')}}"></script>
+    <script src="{{url_for('static', filename='chatbot.js')}}?3"></script>
   </head>
   <body class="bg-dark">
 
-    <section class="bg-dark">
+    <section>
       <div class="container py-5">
     
         <div class="row d-flex justify-content-center">
@@ -41,6 +41,7 @@
       </div>
     </section>
 
+    <img src="{{url_for('static', filename='img/tree.png')}}" class="img-fluid position-sticky bottom-0" width="100%" style="z-index: -1;" alt="Background image of a tree">
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   </body>
